...
        case .ru: return Locale(identifier: "ru_RU")
        }
    }

    var title: String {
        switch self {
        case .tr: return "Türkçe"
        case .en: return "English"
        case .de: return "Deutsch"
        case .fr: return "Français"
        case .es: return "Español"
        case .ja: return "日本語"
        case .ru: return "Русский"
        }
...
